--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
 	"description": "A boilerplate project",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"test": "echo \"Error no test specified\" && exit 1",
+		"start": "nodemon server.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.15.2",
+		"dotenv": "^8.2.0",
 		"express": "^4.12.4",
-		"body-parser": "^1.15.2"
+		"mongodb": "^3.3.5",
+		"mongoose": "^5.7.14",
+		"nodemon": "^2.0.1"
 	},
 	"engines": {
 		"node": "4.4.5"
